--- a/Front_End/src/index.html
+++ b/Front_End/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Front_End</title>
   <base href="/">
+  <link href="./styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
