--- a/Front_End/src/index.html
+++ b/Front_End/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Front_End</title>
-  <!-- <base href="/"> -->
+ <base href="/">
   <link href="./styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
